# mamba-rust

./: Cargo.toml  xgb.model
data/: test1.xyz  test2.xyz  test3.xyz  test5.xyz
src/: main.rs  mamba.rs  ml.rs  utils.rs
src/mambalib/: mambalib.rs  ml.rs  utils.rs
