[package]
name = "mamba-rs"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = ">=0.15", features = ["blas"]}
ndarray-linalg = {version = "^0.13", optional = true, default-features = false}
ndarray-stats = "^0.5"
ndarray-rand = "^0.14"
rand = "^0.8"
polars = {version = ">=0.18", features = ["rows","serde"]}